fix user transaction response
