# handlers/v1/company_stock/models.go
@@ -1,5 +1,7 @@
 package v1companystock
 
+import "capital-challenge-server/models"
+
 type BuyOrSellCompanyStocksRequest struct {
 	CompanyStockID string `json:"company_stock_id"`
 	BuyOrSell      string `json:"buy_or_sell"`
@@ -21,6 +23,11 @@ type SellCompanyStockRequest struct {
 }
 
 type CompanyStockListQueryParams struct {
-	Page string
+	Page     string
 	PageSize string
+}
+
+type CompanyStockTransactionResponse struct {
+	UserTransaction models.UserTransactions `json:"user_transaction"`
+	CurrentBalance  float32 `json:"current_balance" db:"current_balance"`
 }
